[package]
name = "wamp-proto"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
failure = "0.1"
failure_derive = "0.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
lazy_static = "1"
log = "0.4"
parking_lot = "0.9"
rand = "0.7"
regex = "1"
serde = "1"
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tokio = "0.2.0-alpha.6"
tungstenite = { version = "0.9", optional = true }
url = "2"

[dev_dependencies]
env_logger = "0.6"
tokio-process = "0.2"
uuid = { version = "0.7", features = ["v4"] }

[features]
default = ["callee", "caller", "publisher", "subscriber", "ws_transport"]
callee = []
caller = []
publisher = []
subscriber = []
ws_transport = ["tungstenite", "serde_json", "serde_derive"]