[package]
name = "wamp-proto"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
failure = "0.1"
failure_derive = "0.1"
futures = { version = "0.3" }
lazy_static = "1"
log = "0.4"
parking_lot = "0.10"
rand = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { version = "^0.2.9", features = ["sync", "tcp"] }
tokio-tungstenite = { version = "0.10", optional = true }

[dev_dependencies]
env_logger = "0.6"
uuid = { version = "0.7", features = ["v4"] }
tokio = { version = "0.2", features = ["process", "rt-core", "macros", "time", "io-util"] }
tempfile = "3"

[features]
default = ["callee", "caller", "publisher", "subscriber", "ws_transport"]
callee = []
caller = []
publisher = []
subscriber = []
ws_transport = ["tokio-tungstenite", "serde_json"]